--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
             </div>
@@ -100,6 +100,26 @@
                 </div>
             </section>
             <hr class="m-0" />
+            <!-- Publications-->
+            <section class="resume-section" id="publications">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Publications</h2>
+                    <ul class="fa-ul">
+                        <li class="mb-5">
+                            <p><i>"An Autonomous Navigation and Object Tracking System for Aerial Multirotor Robots with Obstacle Avoidance in GPS Denied Environments"</i> </br> <b>International Aerial Robotics Competition IARC) 2018 Symposium on “Indoor Flight Issues”, Georgia Institute of Technology, Atlanta, GA.</b></p>
+                            <a class="btn btn-outline-success btn-sm" href="http://www.aerialroboticscompetition.org/assets/downloads/2018SymposiumPapers/PESUniversity.pdf" target="_blank"> <i class="fas fa-download"></i> Download </a>
+                        </li>
+                        <li class="mb-5">
+                            <p><i>"A Cloud Based Technology Solution for Geo-Spatial Mapping of Diseases Among Children for Strategic Healthcare Planning In Rural India"</i> </br> <b>Special Issue on Geospatial Public Health, ASCI Journal of Management, Vol.46(2) 2017.</b></p>
+                            <a class="btn btn-outline-success btn-sm" href="https://asci.org.in/journal/Vol46(2).pdf" target="_blank"> <i class="fas fa-download"></i> Download </a>
+                        </li>
+                        <li class="mb-5">
+                            <p><i>"Spatial Epidemiology and Bayesian Analysis For Identifying Disease Trends And Determinants Among Children in a Rural Area Of South India"</i> </br> <b>Special Issue on Geospatial Public Health, ASCI Journal of Management, Vol.46(2) 2017.</b></p>
+                            <a class="btn btn-outline-success btn-sm" href="http://www.aerialroboticscompetition.org/assets/downloads/2018SymposiumPapers/PESUniversity.pdf" target="_blank"> <i class="fas fa-download"></i> Download </a>
+                        </li>
+                    </ul>
+            </section>
+            <hr class="m-0" />
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
@@ -160,16 +180,6 @@
                             Agile Development & Scrum
                         </li>
                     </ul>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Interests-->
-            <section class="resume-section" id="interests">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <h2>WIP................</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
                 </div>
             </section>
             <hr class="m-0" />
