--- a/index.html
+++ b/index.html
@@ -54,10 +54,19 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/anushkumar27" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/anushkumar27" target="_blank"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="mailto:anushkumar27@gmail.com" target="_blank"><i class="far fa-envelope"></i></a>
+                        <a class="social-icon" href="https://drive.google.com/file/d/0B_YDr_yZIQeZQ19ULTZWNDNmMjQ/view?usp=sharing" target="_blank" style="text-decoration: none;">CV</a>
                         <!-- <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a> -->
                     </div>
                 </div>
+                <div class="stack-images" >
+                    <img src="/assets/img/walmart_logo.png" class="rounded brand-logo" style="width: 80%" alt="Walmart Labs">
+                    <img src="/assets/img/pes_logo.png" class="rounded brand-logo" style="width: 40%" alt="PES University">
+                    <img src="/assets/img/dst.png" class="rounded brand-logo" style="width: 85%" alt="Department of Science and Technology">
+                    <img src="/assets/img/iarc.png" class="rounded brand-logo" alt="International Aerial Robotics Competition">
+                    <img src="/assets/img/ccbd.png" class="rounded brand-logo" alt="Center of Cloud Computing and Big Data">
+                </div>
             </section>
+           
             <hr class="m-0" />
             <!-- Experience-->
             <section class="resume-section" id="experience">
