Spell check and re-phrase

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                         DEVELOPER. DESIGNER. ENGINEER.
                         <!-- <a href="mailto:name@email.com">name@email.com</a> -->
                     </div>
-                    <p class="lead mb-5">I am a passionate <i>developer</i>, working to keeps <b>Millions!</b> of Walmart customer credentials secure. <br>
-                        And an ardent <i>designer</i>, learning to make life simpler and more tangible for people.</p>
+                    <p class="lead mb-5">I am a passionate <i>developer</i>, working to keep <b>Millions</b> of Walmart customer credentials secure. <br>
+                        Very much an avid <i>designer</i>, learning to make life simpler and more tangible for people.</p>
 
                     <div class="subheading-main mb-1">
                         Me - IN - Short
                     </div>
-                    <p class="lead mb-5">Driven by the passion for designing and building technologies accessible to all, I worked on different technologies <br>ranging from programming autonomous aerial vehicles, graphics design, to designing and developing scalable <br> applications for the millions. I am quite a social being, was part of multiple student and professional groups. </p>
+                    <p class="lead mb-5">Driven by the passion for designing and building tools accessible to all, I worked on different technologies <br>ranging from programming autonomous aerial vehicles, graphics design, to designing and developing scalable <br> applications for the millions. Being part of multiple student and professional groups, refined my leadership skills.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/anushkumar27" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/anushkumar27" target="_blank"><i class="fab fa-github"></i></a>
@@ -81,8 +81,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Development Engineer III</h3>
                             <div class="subheading mb-3">WalmartLabs India</div>
-                            <p>Powering cloud platform team to store and enable Walmart customer to authenticate their credentials. Building scalable systems to support 400 Million+ customers. Some highlights of my contributions to the Identity and Access Management team include,
-                                Designing Hybrid Cache framework for using multiple caching and data sources to reduce latency of hot objects. Worked on feature rich and user friendly login pages for our Single Sign On service. Lead design and development of a full stack application to for users to interact with our service and manage configuration.
+                            <p>Powering cloud platform team to store and enable Walmart customers to authenticate their credentials. Building scalable systems to support 400 Million+ customers. Some highlights of my contributions to the Identity and Access Management team include,
+                                migrating the service from Private to a Hybrid cloud deployment, designing Hybrid Cache framework for using multiple caching and data sources to reduce latency of hot objects. Worked on a feature rich and user friendly login pages for our Single Sign On service. Lead design and development of a full stack application for users to interact with our service and manage configuration.
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2018 - Present</span></div>
@@ -91,7 +91,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineering Intern</h3>
                             <div class="subheading mb-3">WalmartLabs India</div>
-                            <p>Worked on feature to trace user activity by designing an Cassandra data model for storage and retrieval of ingested user data, back-end implemented in Java. The feature also included designing of user interfaces to be used by support agents to trace the user activity. The Web application was built using ReactJS + Redux and Java back-end. </p>
+                            <p>Worked on a feature to trace user activity by designing a Cassandra data model for storage and retrieval of ingested user data, back-end implemented in Java. The feature also included designing of user interfaces to be used by support agents to trace the user activity. The Web application was built using ReactJS + Redux and Java back-end. </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2018 - July 2018</span></div>
                     </div>
@@ -107,7 +107,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research Intern</h3>
                             <div class="subheading mb-3">Centre for Cloud Computing and Big Data, PES University</div>
-                            <p>Working towards a system to enhance teaching practices in academic institutions. Under a working group we performed research to develop a cognitive engine which allowed students to partake in immersive instruction using virtual teachers. The project included working with IBM Watson and Bluemix cloud platform. We learnt the many challenges in designing flows that provided natural human interaction.</p>
+                            <p>Built a system to enhance teaching practices in academic institutions. Under a working group, we developed a cognitive engine which allowed students to partake in immersive instruction using virtual teachers. The project included working with IBM Watson and Bluemix cloud platform. We learnt the many challenges in designing flows that provided natural human interaction.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2016 - July 2018</span></div>
                     </div>
@@ -142,7 +142,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Project Venti - Design & Execution of an Autonomous Multi Rotor Aerial Vehicle</h3>
                             <div class="subheading mb-3">TECHNICAL LEAD (NAVIGATION) - Top 6, Team Aeolus (2016)</div>
-                            <div>The project focuses on building an Unmanned Aerial Vehicle for the International Aerial Robotics Competition supported by Association for Unmanned Vehicle Systems International(AVUSI). Co-designed and implemented navigation systems & path planning algorithms with active obstacle avoidance.</div>
+                            <div>The project focused on building an Unmanned Aerial Vehicle for the International Aerial Robotics Competition supported by Association for Unmanned Vehicle Systems International(AVUSI). Co-designed and implemented navigation systems and path planning algorithms with active obstacle avoidance.</div>
                             <div><i>"A completely unique experience and collaboration from multiple disciplines, lots and lots of failed attempts"</i></div>
                             <br>
                             <iframe width="400" height="250" src="https://www.youtube.com/embed/ak6j_Mc7TkQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -155,7 +155,7 @@
                             <h3 class="mb-0">Geospatial Governance and Information Communication Technology for Disease Mapping, E-Surveillance and Health Care among School Children in a Rural Area of South India.</h3>
                             <div class="subheading mb-1">RESEARCH SCHOLAR</div>
                             <!-- <img src="/assets/img/gsehat.png" class="rounded mb-1" style="width: 10%" alt="Department of Science and Technology"> -->
-                            <div>This project is funded by the Department of Science and Technology, Government of India. It focuses on developing sustainable solutions in long-term strategy planning of health care for school children in the age group of 5-15 years. This model employs geospatial mapping techniques and information & communication technology to diagnose, geographically map and develop long-term strategies for managing healthcare among school children.</div>
+                            <div>This project was funded by the Department of Science and Technology, Government of India. It focused on developing sustainable solutions in long-term strategy planning of health care for school children in the age group of 5-15 years. This model employed geospatial mapping techniques, information and communication technologies to aid management of community health strategies among school children.</div>
                             <div><i>"Working with medical professionals and understanding the vast correlations between socio demographic factors and disease patterns was a real eye opener. It was an amazing opportunity to give back to the society."</i></div>
                             <img src="/assets/img/dst_portal.png" class="rounded mb-5" style="width: 100%" alt="Department of Science and Technology">
                         </div>
