fix publication link

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         </li>
                         <li class="mb-5">
                             <p><i>"Spatial Epidemiology and Bayesian Analysis For Identifying Disease Trends And Determinants Among Children in a Rural Area Of South India"</i> </br> <b>Special Issue on Geospatial Public Health, ASCI Journal of Management, Vol.46(2) 2017.</b></p>
-                            <a class="btn btn-outline-success btn-sm" href="http://www.aerialroboticscompetition.org/assets/downloads/2018SymposiumPapers/PESUniversity.pdf" target="_blank"> <i class="fas fa-download"></i> Download </a>
+                            <a class="btn btn-outline-success btn-sm" href="https://asci.org.in/journal/Vol46(2).pdf" target="_blank"> <i class="fas fa-download"></i> Download </a>
                         </li>
                     </ul>
             </section>
