--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                     <h2 class="mb-5">Projects</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Project Venti - Design & Execution of an Autonomous Multi Rotor Aerial Vehicle</h3>
-                            <div class="subheading mb-3">TECHNICAL LEAD (NAVIGATION) - Top 6, Team Aeolus (2016)</div>
-                            <div>The project focused on building an Unmanned Aerial Vehicle for the International Aerial Robotics Competition supported by Association for Unmanned Vehicle Systems International(AVUSI). Co-designed and implemented navigation systems and path planning algorithms with active obstacle avoidance.</div>
+                            <h3 class="mb-0">Project Venti - Design & Execution of an Autonomous Multi Rotor Aerial Robot</h3>
+                            <div class="subheading mb-3">Top 6, Team Aeolus (2016)</div>
+                            <div>The project focused on building an autonomous aerial robot for the International Aerial Robotics Competition supported by Association for Unmanned Vehicle Systems International(AVUSI). Co-designed and implemented path planning algorithms with active obstacle avoidance.</div>
                             <div><i>"A completely unique experience and collaboration from multiple disciplines, lots and lots of failed attempts"</i></div>
                             <br>
                             <iframe width="400" height="250" src="https://www.youtube.com/embed/ak6j_Mc7TkQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
