--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
                         DEVELOPER. DESIGNER. ENGINEER.
                         <!-- <a href="mailto:name@email.com">name@email.com</a> -->
                     </div>
-                    <p class="lead mb-5">I am a passionate <i>developer</i>, working to keep <b>Millions</b> of Walmart customer credentials secure. <br>
-                        Very much an avid <i>designer</i>, learning to make life simpler and more tangible for people.</p>
+                    <p class="lead mb-5">I am a passionate <i>developer</i>, currently pursuing my Master's with a major in Computer Science 
+                        from Oregon State University <br> with a focus on the field of <i>Human Computer Interaction.</i><br>
+                        Very much an avid <i>designer</i>, learning to make life simpler and more tangible for people.<br>
+                    </p>
+
 
                     <div class="subheading-main mb-1">
                         Me - IN - Short
@@ -64,6 +67,7 @@
                     </div>
                 </div>
                 <div class="stack-images" >
+                    <img src="/assets/img/osu.jpg" class="rounded brand-logo" style="width: 80%" alt="Oregon State University">
                     <img src="/assets/img/walmart_logo.png" class="rounded brand-logo" style="width: 80%" alt="Walmart Labs">
                     <img src="/assets/img/pes_logo.png" class="rounded brand-logo" style="width: 40%" alt="PES University">
                     <img src="/assets/img/dst.png" class="rounded brand-logo" style="width: 85%" alt="Department of Science and Technology">
@@ -79,13 +83,35 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Graduate Teaching Assistant</h3>
+                            <div class="subheading mb-3">Oregon State Univeristy, Corvallis</div>
+                            <p>I am currently a Graduate Teaching Assistant for the course CS344 Operating Systems - I.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Graduate Research Assistant</h3>
+                            <div class="subheading mb-3">Oregon State Univeristy, Corvallis</div>
+                            <p>Conducted research on a “Mixed Reality(MR) inspection tool to support workers in Industry 4.0 environment” under the
+                                guidance of Prof. Raffaele de Amicis. We are exploring ways to apply machine intelligence to enhance event driven
+                                interaction and aid in inspection verification in MR.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2021 - December 2021</span></div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Software Development Engineer III</h3>
                             <div class="subheading mb-3">WalmartLabs India</div>
                             <p>Powering cloud platform team to store and enable Walmart customers to authenticate their credentials. Building scalable systems to support 400 Million+ customers. Some highlights of my contributions to the Identity and Access Management team include,
                                 migrating the service from Private to a Hybrid cloud deployment, designing Hybrid Cache framework for using multiple caching and data sources to reduce latency of hot objects. Worked on a feature rich and user friendly login pages for our Single Sign On service. Lead design and development of a full stack application for users to interact with our service and manage configuration.
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - August 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
